src/components/filters/FilterSection/FilterSection.css
@import "../../../css/base.css";
@import "../../../css/icon.css";

.g3-filter-section {
  box-sizing: border-box;
  width: 100%;
  padding: 14px 14px;
  background-color: var(--g3-color__white);
  border-left: 1px solid var(--g3-color__silver);
  border-right: 1px solid var(--g3-color__silver);
  border-bottom: 1px solid var(--g3-color__silver);
}

.g3-filter-section:first-child {
  border-top: 1px solid var(--g3-color__silver);
}

.g3-filter-section__header {
  display: flex;
  justify-content: space-between;
  outline: none;
  cursor: pointer;
}

.g3-filter-section__title {
  font-size: 14px;
  font-weight: var(--g3-font__semi-bold-weight);
  color: var(--g3-color__black);
  margin: 0;
}

.g3-filter-section__options {
  font-size: 14px;
  color: var(--g3-color__gray);
}

.g3-filter-section__toggle-icon {
  background-color: var(--g3-color__lightgray);
}

.g3-filter-section__show-more {
  border: none;
  outline: none;
  color: var(--g3-color__base-blue);
  cursor: pointer;
  margin-top: 15px;
  text-align: right;
}

.g3-filter-section__tooltip .rc-tooltip-inner {
  min-height: unset;
  border: 1px solid var(--g3-color__silver);
  border-radius: 4px;
}

.g3-filter-section .rc-tooltip-placement-top .rc-tooltip-arrow,
.g3-filter-section .rc-tooltip-placement-topLeft .rc-tooltip-arrow,
.g3-filter-section .rc-tooltip-placement-topRight .rc-tooltip-arrow {
  border-top-color: var(--g3-color__silver);
}

.g3-filter-section__search-input {
  border: 1px solid var(--g3-color__lightgray);
  border-radius: var(--g3-auto-complete__border-radius);
  padding: 5px 8px;
  position: relative;
  display: flex;
  margin-top: 8px;
}

.g3-filter-section__search-input-box {
  outline: none;
  border: none;
  width: 100%;
}

.g3-filter-section__search-input:active {
  border-color: var(--g3-color__base-blue);
}

.g3-filter-section__search-input--hidden {
  display: none;
}

.g3-filter-section__search-input-close {
  width: 10px;
  height: 10px;
  position: relative;
  top: 6px;
  right: 6px;
  background-color: var(--g3-color__gray);
  cursor: pointer;
}

.g3-filter-section__search-input-separator {
  width: 1px;
  border-left: 1px solid var(--g3-color__lightgray);
  margin: 0 10px;
}

.g3-filter-section__search-input-icon {
  background-color: var(--g3-color__gray);
  position: relative;
  top: 3px;
  cursor: pointer;
}

